@@ -93,7 +93,7 @@ The following objects are masked from 'package:stats':
     IQR, mad, median, var
 
 Loading required package: RandVar
-:RandVar>  Implementation of Random Variables (version 1.1.0)
+:RandVar>  Implementation of Random Variables (version 1.2.0)
 :RandVar> 
 :RandVar>  For more information see ?"RandVar", NEWS("RandVar"), as
 :RandVar>  well as
@@ -459,7 +459,7 @@ function (x)
         dimnames = list(nms, nms0))
     list(fval = fval0, mat = mat0)
 }
-<bytecode: 0x0e596b80>
+<bytecode: 0x0e0c24c8>
 Trafo / derivative matrix at which estimate was produced:
        scale shape
 shape  0.000     1
@@ -675,7 +675,7 @@ function (x)
         1)/c(scale = 1)
     return(y)
 }
-<environment: 0x0ed32a30>
+<environment: 0x0e862ca0>
 
 > checkL2deriv(E1)
 precision of centering:	 -2.04266e-06 
@@ -863,8 +863,8 @@ Slot "name":
 Slot "fct":
 function (x) 
 QuadFormNorm(x, A = A)
-<bytecode: 0x0f550478>
-<environment: 0x0f5502b8>
+<bytecode: 0x0f3eac18>
+<environment: 0x0f3eaa58>
 
 > 
 > ## The function is currently defined as
@@ -1182,7 +1182,7 @@ function (x)
         1)/c(meanlog = 1)
     return(y)
 }
-<environment: 0x109f06e8>
+<environment: 0x0ccc67b0>
 
 > checkL2deriv(L1)
 precision of centering:	 -0.003003394 
@@ -2290,7 +2290,7 @@ function (x)
         return(abs(x))
     else return(sqrt(colSums(x^2)))
 }
-<bytecode: 0x0c5c3cf0>
+<bytecode: 0x0dd6b0a0>
 <environment: namespace:distrMod>
 > name(EuclNorm)
 [1] "EuclideanNorm"
@@ -2325,7 +2325,7 @@ function (x)
         return(abs(x))
     else return(sqrt(colSums(x^2)))
 }
-<bytecode: 0x0c5c3cf0>
+<bytecode: 0x0dd6b0a0>
 <environment: namespace:distrMod>
 
 > 
@@ -2808,8 +2808,8 @@ Slot "name":
 Slot "fct":
 function (x) 
 QuadFormNorm(x, A = A0)
-<bytecode: 0x0ab62598>
-<environment: 0x0ab61968>
+<bytecode: 0x0ad449a0>
+<environment: 0x0ad44ba0>
 
 > 
 > ## The function is currently defined as
@@ -2850,8 +2850,8 @@ Slot "name":
 Slot "fct":
 function (x) 
 QuadFormNorm(x, A = A)
-<bytecode: 0x0a8f7558>
-<environment: 0x0a8f7838>
+<bytecode: 0x0ac8fb50>
+<environment: 0x0ac8ed80>
 
 > 
 > ## The function is currently defined as
@@ -3977,7 +3977,7 @@ function (param)
     dimnames(mat) <- list(nfval, c("mean", "sd"))
     return(list(fval = fval, mat = mat))
 }
-<bytecode: 0x0d7bc198>
+<bytecode: 0x0e17bbb0>
 > print(param(NS), show.details = "minimal")
 An object of class "ParamWithScaleFamParameter"
 name:	location and scale
@@ -4026,7 +4026,7 @@ function (param)
     dimnames(mat) <- list(nfval, c("mean", "sd"))
     return(list(fval = fval, mat = mat))
 }
-<bytecode: 0x0d7bc198>
+<bytecode: 0x0e17bbb0>
 Trafo / derivative matrix:
             mean         sd
 mu/sig 0.3668695 -0.3024814
@@ -4069,7 +4069,7 @@ function (param)
     dimnames(mat) <- list(nfval, c("mean", "sd"))
     return(list(fval = fval, mat = mat))
 }
-<bytecode: 0x0d7bc198>
+<bytecode: 0x0e17bbb0>
 Trafo / derivative matrix:
          mean      sd
 mu/sig 0.3669 -0.3025
@@ -4490,7 +4490,7 @@ sig^2  3.6698685 11.189719
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  33.45 0.5 33.98 NA NA 
+Time elapsed:  52.66 0.75 55.35 NA NA 
 > grDevices::dev.off()
 null device 
           1 
